--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<h1>
-  {{title}}
-</h1>
+<div *ngIf="isLoggedIn">
+  <nav>
+    <li (click)="logout()">Logout</li>
+  </nav>
+</div>
+
 <div class="app-content">
   <router-outlet></router-outlet>
 </div>
