--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,3 +1,21 @@
-<p>
-  home-page works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <div class="bs-example" id="messages">
+
+        <div *ngFor="let message of messages | async">
+          <div class="bubble" [class.you]="isYou(message.email)" [class.me]="isMe(message.email)">
+            <p>{{ message.message }}</p>
+            <div class="author">
+              {{ message.displayName }} | {{ message.timestamp | date:"MM/dd/yy hh:mm a" }}
+            </div>
+          </div>
+        </div>
+      </div>
+      <figure class="highlight">
+        <input type="textarea" class="message-text" [(ngModel)]="newMessage" (keyup.enter)="sendMessage()">
+        <a class="send-message" (click)="sendMessage()">SEND</a>
+      </figure>
+    </div>
+  </div>
+</div>
