--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,12 +2,13 @@
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <div class="bs-example" id="messages">
-
-        <div *ngFor="let message of messages | async">
-          <div class="bubble" [class.you]="isYou(message.email)" [class.me]="isMe(message.email)">
-            <p>{{ message.message }}</p>
-            <div class="author">
-              {{ message.displayName }} | {{ message.timestamp | date:"MM/dd/yy hh:mm a" }}
+        <div class="bs-example" id="messages" #scrollMe>
+          <div *ngFor="let message of messages | async">
+            <div class="bubble" [class.you]="isYou(message.email)" [class.me]="isMe(message.email)">
+              <p>{{ message.message }}</p>
+              <div class="author">
+                {{ message.displayName }} | {{ message.timestamp | date:"MM/dd/yy hh:mm a" }}
+              </div>
             </div>
           </div>
         </div>
